<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24sp"
        android:text="@string/welcome"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/tvQuizProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/score_value"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/pbQuizProgress"
        app:layout_constraintEnd_toStartOf="@+id/pbQuizProgress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pbQuizProgress" />

    <ProgressBar
        android:id="@+id/pbQuizProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300sp"
        android:layout_height="24sp"
        android:layout_gravity="center"
        android:layout_marginTop="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="64sp"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pbQuizProgress" />

    <Button
        android:id="@+id/btnAnswer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64sp"
        android:text="@string/name"
        android:textSize="24sp"
        android:paddingLeft="48sp"
        android:paddingRight="48sp"
        android:paddingTop="16sp"
        android:paddingBottom="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAnswer2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestion" />

    <Button
        android:id="@+id/btnAnswer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16sp"
        android:text="@string/name"
        android:textSize="24sp"
        android:paddingLeft="48sp"
        android:paddingRight="48sp"
        android:paddingTop="16sp"
        android:paddingBottom="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAnswer3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAnswer1" />

    <Button
        android:id="@+id/btnAnswer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16sp"
        android:text="@string/name"
        android:textSize="24sp"
        android:paddingLeft="48sp"
        android:paddingRight="48sp"
        android:paddingTop="16sp"
        android:paddingBottom="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAnswer2" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="240sp"
        android:layout_height="70sp"
        android:layout_gravity="center"
        android:layout_marginTop="96sp"
        android:layout_marginBottom="96sp"
        android:text="@string/submit"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAnswer3" />


</androidx.constraintlayout.widget.ConstraintLayout>